fix: scrollbar & proxy chains style

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -106,3 +106,7 @@
     display: none;
   }
 }
+
+div {
+  @apply scrollbar-thin;
+}
